<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_jump"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".PhotoMenu" >

	<RadioGroup
	    android:id="@+id/jump_radio"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:checkedButton="@+id/jump_num" >
	    
		<RadioButton
			android:id="@+id/jump_first"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/jump_first" />

		<RadioButton
			android:id="@+id/jump_last"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="true"
			android:text="@string/jump_last" />

		<RadioButton
			android:id="@+id/jump_num"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/jump_num" />

	</RadioGroup>

	<EditText
	    android:id="@+id/jump_text"
		android:layout_width="0dip"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:maxLines="1"
		android:inputType="text" />

</LinearLayout>
